k8s/deployments/netflix-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix
  template:
    metadata:
      labels:
        app: netflix
    spec:
      containers:
      - name: netflix
        image: rodrigosousadf/netflix:latest
        ports:
        - containerPort: 3000
        #readinessProbe:
          #tcpSocket:
            #port: 80
          #initialDelaySeconds: 5
          #periodSeconds: 10
        #livenessProbe:
          #tcpSocket:
            #port: 80
          #initialDelaySeconds: 10
         # periodSeconds: 10
