k8s/deployments/netflix-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
spec:
  type: ClusterIP  # Altera o tipo de serviço para ClusterIP
  selector:
    app: netflix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
